errors_ascii.txt
cargo :     Checking 
telegram-ai-analyzer 
v0.1.0 (C:\Users\HP\D
esktop\rust\telegram-
boot\telegram-ai-anal
yzer)
Au caract?re Ligne:1 
: 1
+ cargo check 2> 
errors.txt; 
Get-Content 
errors.txt -Encoding 
utf8 | Ou ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking te...am-ai    
-analyzer):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
import: `Context`
 --> src\bot.rs:3:22
  |
3 | use 
anyhow::{anyhow, 
Context, Result};
  |                  
    ^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

error[E0382]: borrow 
of moved value: 
`response`
   --> 
src\ai.rs:81:62
    |
71  |         let 
response = 
self.client
    |             
-------- move occurs 
because `response` 
has type `Response`, 
which does not 
implement the `Copy` 
trait
...
80  |             
let error_body = resp
onse.text().await.unw
rap_or_default();
    |                
                     
  ------ `response` 
moved due to this 
method call
81  |             
return 
Err(anyhow!("Erreur 
API OpenAI ({}): 
{}", 
response.status(), 
error_body));
    |                
                     
                     
    ^^^^^^^^ value 
borrowed here after 
move
    |
note: 
`Response::text` 
takes ownership of 
the receiver `self`, 
which moves 
`response`
   --> C:\Users\HP\.c
argo\registry\src\ind
ex.crates.io-1949cf8c
6b5b557f\reqwest-0.11
.27\src\async_impl\re
sponse.rs:147:23
    |
147 |     pub async 
fn text(self) -> crat
e::Result<String> {
    |                
       ^^^^

warning: unused 
variable: 
`in_code_block`
  --> 
src\markdown.rs:35:13
   |
35 |     let mut 
in_code_block = 
false;
   |             
^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_in_code_block`
   |
   = note: `#[warn(un
used_variables)]` on 
by default

warning: variable 
does not need to be 
mutable
  --> 
src\markdown.rs:35:9
   |
35 |     let mut 
in_code_block = 
false;
   |         
----^^^^^^^^^^^^^
   |         |
   |         help: 
remove this `mut`
   |
   = note: `#[warn(un
used_mut)]` on by 
default

For more information 
about this error, 
try `rustc --explain 
E0382`.
warning: `telegram-ai
-analyzer` (lib) 
generated 3 warnings
error: could not 
compile `telegram-ai-
analyzer` (lib) due 
to 1 previous error; 
3 warnings emitted
